--- a/ERToGo/app/src/main/res/values/strings.xml
+++ b/ERToGo/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">ER-To-Go</string>
+
+<string-array name="injuries">
+    <item>Bruising</item>
+    <item>Burning</item>
+    <item>Bleeding</item>
+    <item>Dislocated</item>
+    <item>Fracture</item>
+    <item>Other</item>
+</string-array>
 </resources>
