--- a/ERToGo/app/src/main/res/values/strings.xml
+++ b/ERToGo/app/src/main/res/values/strings.xml
@@ -1,12 +1,14 @@
 <resources>
     <string name="app_name">ER-To-Go</string>
 
-<string-array name="injuries">
-    <item>Bruising</item>
-    <item>Burning</item>
-    <item>Bleeding</item>
-    <item>Dislocated</item>
-    <item>Fracture</item>
-    <item>Other</item>
-</string-array>
+    <string-array name="injuries">
+        <item>Bruising</item>
+        <item>Burning</item>
+        <item>Bleeding</item>
+        <item>Dislocated</item>
+        <item>Fracture</item>
+        <item>Other</item>
+    </string-array>
+    <string name="title_activity_user_status_queue">UserStatusQueue</string>
+    <string name="title_activity_user_queue_status">UserQueueStatus</string>
 </resources>
